home: rearrange about section

--- a/views/components/footer/footer.html
+++ b/views/components/footer/footer.html
@@ -23,7 +23,7 @@
 
     <div class="footer-column">
       <h4>Liên hệ</h4>
-      <p>Lầu 12, số 27 Dinh Bộ Lĩnh, P. Bình Thạnh, TP. Hồ Chí Minh</p>
+      <p>Lầu 12, số 27 Đinh Bộ Lĩnh, P. Bình Thạnh, TP. Hồ Chí Minh</p>
       <p>
         Điện thoại:
         <a href="tel:+84 96 227 7912" title="Gọi cho Kỳ Long"
