contact: change location and email

--- a/views/contactPages/contactMain.html
+++ b/views/contactPages/contactMain.html
@@ -211,9 +211,7 @@
           <div class="contact-info">
             <div class="contact-item">
               <i class="fas fa-map-marker-alt"></i>
-              <p>
-                81-83 Nguyễn Hữu Cầu, Phường Tân Định, Quận 1, TP. Hồ Chí Minh
-              </p>
+              <p>Lầu 12, số 27 Đinh Bộ Lĩnh, P. Bình Thạnh, TP.Hồ Chí Minh</p>
             </div>
             <div class="contact-item">
               <i class="fas fa-phone-alt"></i>
@@ -221,13 +219,13 @@
             </div>
             <div class="contact-item">
               <i class="fas fa-envelope"></i>
-              <p>info@kylong.com.vn</p>
+              <p>info@kylongtech.com</p>
             </div>
           </div>
 
           <div class="map-container">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.319614179758!2d106.6912143152602!3d10.78684089231477!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f3a5b5b5b5b%3A0x5b5b5b5b5b5b5b5b!2s81-83%20Nguy%E1%BB%85n%20H%E1%BB%AFu%20C%E1%BA%A7u%2C%20Ph%C6%B0%E1%BB%9Dng%20T%C3%A2n%20%C4%90%E1%BB%8Bnh%2C%20Qu%E1%BA%ADn%201%2C%20TP.%20H%E1%BB%93%20Ch%C3%AD%20Minh!5e0!3m2!1sen!2s!4v1631234567890!5m2!1sen!2s"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.0886950094214!2d106.70665347594756!3d10.804518689345947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528bb7aef745f%3A0x9171c157a44f8c21!2zMjcgxJAuIMSQaW5oIELhu5kgTMSpbmgsIFBoxrDhu51uZyAxNCwgQsOsbmggVGjhuqFuaCwgSOG7kyBDaMOtIE1pbmgsIFZpZXRuYW0!5e0!3m2!1sen!2s!4v1757160111176!5m2!1sen!2s"
               width="100%"
               height="300"
               style="border: 0"
